[package]
name = "grep"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
thiserror = "2.0.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
