[package]
name = "xunmi-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "xunmi_py"
crate-type = ["cdylib"]

[dependencies]
# pyo3 = { version = "0.23.3", features = ["extension-module"] }
pyo3 = {version = "0.14", features = ["extension-module"]}
serde_json = "1.0.133"
xunmi = "0.2.1"

[build-dependencies]
pyo3-build-config = "0.14"
